--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,9 @@
 html {
     font-size: 100%;
 }
+ul {
+    list-style-type: none;
+}
 /*  app name section starts */
 .app-name {
     display: flex;
@@ -13,6 +16,7 @@ html {
     margin: 0px 2rem;
     text-align: left;
 }
+
 
 /* app name section ends */
 
@@ -39,3 +43,70 @@ html {
     width: 50%;
 }
 /* login form section ends */
+
+
+
+
+/* Page bar starts */
+
+.page-bar .username {
+    position: relative;
+}
+.page-bar .profile-icon {
+    width: 30px;
+    height: 30px;
+    border-radius: 40px;
+    background-color: #6c757d;
+    position: absolute;
+    right: 85px;
+}
+
+/* Page bar ends */
+
+
+/* menu list starts */
+.menu-list a {
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    display: block;
+}
+/* menu list ends */
+
+/* left panel starts */
+.left-panel {
+    height: calc(100% - 10%);
+    width: 12rem;
+    position: fixed;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+}
+.left-panel .list-group-item {
+    border-bottom: 1px solid black;
+    border-radius: 0;
+}
+.copyright {
+
+}
+/* left panel ends */
+
+.data-section {
+    margin: 0 10px;
+}
+
+/* right panel starts */
+
+.right-panel .item {
+    padding: 20px 0;
+}
+
+.right-panel .account-and-add-button button {
+    width: 30%;
+}
+
+.right-panel .buttons {
+    border: 1px solid black;
+    padding: 10px 0;
+}
+/* right panel ends */
