--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,17 +18,17 @@
                 <form method="post" th:action="@{/register}" th:object="${user}">
                     <div class="form-floating mb-3">
                         <input th:field="*{username}" value="" name="username" type="text" class="form-control"
-                               id="username" placeholder="Your username">
+                               id="username" placeholder="Your username" autofocus required>
                         <label for="username">Username</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input th:field="*{email}" name="email" type="email" class="form-control" id="floatingInput"
-                               placeholder="name@example.com">
+                               placeholder="name@example.com" required>
                         <label for="floatingInput">Email address</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input th:field="*{password}" value="" name="password" type="password" class="form-control"
-                               id="floatingPassword" placeholder="Password">
+                               id="floatingPassword" placeholder="Password" required>
                         <label for="floatingPassword">Password</label>
                     </div>
                     <div class="form-floating">
