--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,9 @@
         <div class="container">
             <div class="login-form-section">
                 <span class="lead form-title">Sign in to continue</span>
+                <div class="bg-light" th:if="${message}">
+                    <p class="text-danger text-center h6 p-3" th:text="${message}"></p>
+                </div>
                 <form method="post" th:action="@{/login}" th:object="${user}">
                     <div class="form-floating mb-3">
                         <input th:field="*{email}" type="email" class="form-control" id="floatingInput"
