--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,9 +1,11 @@
 html {
     font-size: 100%;
 }
+
 ul {
     list-style-type: none;
 }
+
 /*  app name section starts */
 .app-name {
     display: flex;
@@ -42,23 +44,22 @@ ul {
     padding: 5px;
     width: 50%;
 }
+
 /* login form section ends */
-
-
 
 
 /* Page bar starts */
 
 .page-bar .username {
-    position: relative;
+    display: flex;
 }
+
 .page-bar .profile-icon {
     width: 30px;
     height: 30px;
     border-radius: 40px;
     background-color: #6c757d;
-    position: absolute;
-    right: 85px;
+    margin-right: 8px;
 }
 
 /* Page bar ends */
@@ -71,6 +72,7 @@ ul {
     width: 100%;
     display: block;
 }
+
 /* menu list ends */
 
 /* left panel starts */
@@ -82,13 +84,16 @@ ul {
     border-bottom: 1px solid black;
     border-right: 1px solid black;
 }
+
 .left-panel .list-group-item {
     border-bottom: 1px solid black;
     border-radius: 0;
 }
+
 .copyright {
 
 }
+
 /* left panel ends */
 
 .data-section {
@@ -109,4 +114,5 @@ ul {
     border: 1px solid black;
     padding: 10px 0;
 }
+
 /* right panel ends */
