--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -94,6 +94,12 @@ ul {
 
 }
 
+.logout-btn {
+    background-color: transparent;
+    color: black;
+    width: 100%;
+}
+
 /* left panel ends */
 
 .data-section {
