--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -122,3 +122,13 @@ ul {
 }
 
 /* right panel ends */
+
+/* display block or none */
+
+.display-block {
+    visibility: visible;
+}
+
+.display-none {
+    visibility: hidden;
+}
