--- a/src/main/resources/templates/baseLayout.html
+++ b/src/main/resources/templates/baseLayout.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
-    <script th:src="@{/js/script.js}" type="text/javascript"></script>
+    <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </head>
 <body>
 
