--- a/src/main/resources/templates/baseLayout.html
+++ b/src/main/resources/templates/baseLayout.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeLeaf.org">
 <head th:fragement="headFiles">
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <script th:src="@{/js/bootstrap.bundle.min.js}" type="text/javascript"></script>
-    <script type="text/javascript" th:src="@{/js/script.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css">
+    <script th:src="@{/js/bootstrap.bundle.min.js}" src="../static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script type="text/javascript" th:src="@{/js/script.js}" src="../static/js/script.js"></script>
 </head>
 <body>
 
