--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -31,11 +31,25 @@
                                id="floatingPassword" placeholder="Password" required>
                         <label for="floatingPassword">Password</label>
                     </div>
-                    <div class="form-floating">
-                        <input type="password" value="" class="form-control" id="repeatPassword"
-                               placeholder="Again type your password">
-                        <label for="floatingPassword">Repeat password</label>
+                    <div class="row">
+
+                        <div class="col">
+                            <div class="form-floating mb-3">
+                                <input type="password" value="" class="form-control" id="repeatPassword"
+                                       placeholder="Again type your password">
+                                <label for="floatingPassword">Repeat password</label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <select th:field="*{teamName}" class="form-select" aria-label="Default select example" required>
+                                <option th:value="''" selected>Select a Team</option>
+                                <option th:value="'Team-1'">Team-1</option>
+                                <option th:value="'Team-2'">Team-2</option>
+                                <option th:value="'Team-3'">Team-3</option>
+                            </select>
+                        </div>
                     </div>
+
                     <div class="d-flex justify-content-center mb-3">
                         <button class="btn btn-warning login-btn mt-3">REGISTER</button>
                     </div>
