teams budget has changed.

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -46,6 +46,7 @@
                                 <option th:value="'Team-1'">Team-1</option>
                                 <option th:value="'Team-2'">Team-2</option>
                                 <option th:value="'Team-3'">Team-3</option>
+                                <option th:value="'Team-4'">Team-4</option>
                             </select>
                         </div>
                     </div>
